# scummvm

./: configure
audio/: mididrv.cpp  mt32gm.h  musicplugin.h
audio/decoders/: adpcm_intern.h
backends/: base-backend.cpp  module.mk
backends/fs/: compStream.cpp  compStream.h
backends/plugins/: dynamic-plugin.h
base/: commandLine.cpp  main.cpp  pluginCollection.h  plugins.cpp  plugins.h  version.h
base/detection/: detection.cpp
common/: algorithm.h  array.h  debug.h  hashmap.h  installshield_cab.cpp  list.h  memory.h  memorypool.h  scummsys.h  singleton.h  system.cpp  system.h  winexe.h  winexe_pe.h
devtools/create_project/: build_setup.cpp  build_setup.h  cmake.cpp  cmake.h  codeblocks.cpp  codeblocks.h  create_project.cpp  create_project.h  module.mk  msbuild.cpp  msbuild.h  msvc.cpp  msvc.h  project_provider.cpp  project_provider.h  xcode.cpp  xcode.h
devtools/create_project/cmake/: CMakeLists.txt
dists/: access.rc  agi.rc  cryo.rc  drascula.rc  hadesch.rc  hugo.rc  kyra.rc  lure.rc  macventure.rc  mortevielle.rc  neverhood.rc  prince.rc  queen.rc  scumm.rc  sky.rc  supernova.rc  titanic.rc
dists/android/: build.gradle
engines/: advancedDetector.cpp  advancedDetector.h  engine.cpp  engine.h  engineman.cpp  engineman.h  metaengine.h  module.mk
engines/asylum/: asylum.cpp  asylum.h
engines/capbible/: capbible.cpp  capbible.h  configure.engine  debugger.h  (+10 more)
graphics/: cursorman.h  fontman.h  nine_patch.h  scalerplugin.h  sjis.h  surface.h  wincursor.h
gui/: about.cpp  editgamedialog.cpp  editgamedialog.h  launcher.cpp  massadd.cpp  options.cpp
(+142 files in other folders)
